Fixed some bad spacing btw sections

--- a/gigapop_home/css/styles.css
+++ b/gigapop_home/css/styles.css
@@ -147,8 +147,8 @@ footer{
 .section-icon{
 	z-index: -1;
 	grid-column-end: 6;
-	grid-column-start: span 5;
-	grid-row: 1 / span 3;
+	grid-column-start: span 4;
+	grid-row: 1 / 3;
 	margin-right: 0;
 	opacity: .25;
 	align-self:center;
